Added a jsp file and show all the movies